# nyuseu

./: .coveragerc  .gitignore  .gitlab-ci.yml  CHANGELOG  CONTRIBUTING.md  README.md  manage.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
.github/workflows/: codeql-analysis.yml  python-package.yml
nyuseu/: __init__.py  admin.py  apps.py  asgi.py  engine.py  env.sample  feedsparser_data.py  forms.py  models.py  opml_load.py  requirements-conf-server.txt  settings.py  setup.cfg  urls.py  views.py  views_board.py  wsgi.py
nyuseu/api/: serializers.py  urls.py  views.py
nyuseu/management/commands/: engine.py  nyuseu.py  nyuseu_update.py  opml_dump.py  opml_export.py  opml_load.py  read.py  update.py
nyuseu/migrations/: 0005_auto_20210814_2100.py  0006_auto_20210820_1009.py  0007_alter_articles_managers.py  0008_articles_unique_article.py  0009_auto_20211017_0903.py  0010_myboard_myboardfeeds.py  0011_auto_20211030_1710.py
nyuseu/static/: 404.html  500.html  maintenance.html  nyuseu.css  nyuseu.js
nyuseu/templates/: 404.html  500.html  base.html  base_board.html  index.html  menu_left.html  swagger-ui.html
nyuseu/templates/nyuseu/: article_footer.html  articles_detail.html  articles_list.html  articles_list_board.html  feeds_link.html  folders_link.html  messages.html  myboard_form.html  myboards_articles_list.html
nyuseu/tests/: test_conf.py  test_models.py  test_nyuseu_update.py  test_version.py  test_views.py  test_xcmd.py
sample/: feedly-e2343e92-9e71-4345-b045-cef7e1736cd2-2020-06-20.opml
