[metadata]
name=nyuseu
description="Nyuseu :: News Reader :: 뉴스"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://framagit.org/annyong/nyuseu
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=Nyuseu - 뉴스 - News
version=file: VERSION.txt

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Database


[options]
zip_safe=false

include_package_data=true

install_requires=
    arrow==1.2.1
    beautifulsoup4==4.10.0
    Django<=3.3.0
    django-environ==0.8.1
    feedparser==6.0.8
    httpx==0.20.0
    opml==0.5
    pypandoc==1.6.4
    rich==10.12.0
    djangorestframework==3.12.4


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build,.eggs
