[metadata]
name=nyuseu
description="Nyuseu :: News Reader :: 뉴스"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://framagit.org/annyong/nyuseu
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=Nyuseu - 뉴스 - News Reader
version=file: VERSION.txt

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: Public Domain
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Internet :: WWW/HTTP
    Topic :: Database


[options]
zip_safe=false

include_package_data=true

install_requires=
    arrow==1.2.2
    Django==4.1.0
    django-environ==0.9.0
    django-fortune==1.1.1
    django-simple-search==1.0.2
    djangorestframework==3.13.1
    httpx==0.23.0
    newspaper3k==0.2.8
    # provides:
    # beautifulsoup4
    # feedparser
    opml==0.5
    pypandoc==1.8.1
    rich==12.5.1


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build,.eggs
