[metadata]
name=nyuseu
description="Nyuseu - 뉴스 - News"
author=FoxMaSk
author_email=foxmask@protonmail.com
url=https://github.com/foxmask/nyuseu-news
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=Nyuseu - 뉴스 - News
version= attr: nyuseu.__version__
download_url="https://github.com/foxmask/nyuseu-news/archive/nyuseu-news-" + version + ".zip",
classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Topic :: Internet :: WWW/HTTP


[options]
zip_safe=false

include_package_data=true

install_requires=
    Django
    django-environ
    feedparser
    httpx
    opml


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build