[metadata]
name=nyuseu
description="Nyuseu - 뉴스 - News"
author=FoxMaSk
author_email=foxmask@protonmail.com
url=https://gitlab.com/annyong/nyuseu
long_description=file: README.md
long_description_content_type=text/markdown
license= BSD License
keywords=Nyuseu - 뉴스 - News
version= attr: nyuseu.__version__
download_url="https://gitlab.com/annyong/nyuseu/archive/nyuseu-" + version + ".zip",
classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP


[options]
zip_safe=false

include_package_data=true

install_requires=
    arrow==0.17.0
    beautifulsoup4==4.9.3
    Django==3.1.2
    django-environ==0.4.5
    feedparser==6.0.1
    feedparser==0.1.0
    httpx==0.16.1
    opml==0.5
    rich=9.1.0


[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=120
exclude=.tox,build
